# cu-learn

./: .clangd  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md
docs/: cute_notes.md
examples/: full_benchmark.sh  single_run.sh
include/: common.h
src/benchmarks/: gemm_bench.cu
src/demo/: cute_test.cu  swizzle_test.cu
src/optimizations/00_naive/: README.md  gemm.cu
src/optimizations/01_shared_memory/: README.md  gemm.cu
src/optimizations/02_loop_unrolling/: gemm.cu
src/optimizations/02_register_blocking/: README.md
src/optimizations/03_register_blocking/: gemm.cu
src/plot/: plot.py
